[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["HarlemShaker <ega3001@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.0"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
